# themodelshop

./: README.md  dockerfile  pyproject.toml  todo.md
docs/: development_standards.md  employee.md  filecabinet.md  resources.md  secretary,md  secretary.md
src/: secretary.py
src/employees/: analyst.py
src/secretary/: filecabinet.py  secretary.py
src/utils/: convergence.py  generateData.py
src/utils/data/: datasets.py
src/utils/system/: file.py
tests/: get_data.py
tests/file_cabinet/: test_filecabinet_init.py
tests/secretary/: test_filecabinet_init.py
tests/utils/data/datasets/: test_titanic.py
themodelshop/: file_cabinet.py  labor_force.py
themodelshop/secretary/: filecabinet.py
themodelshop/utils/: deprecate_convergence.py
themodelshop/utils/data/: datasets.py  generateData.py
themodelshop/utils/data/handlers/: __init__.py  handle_pyarrow_Table.py
