[tool.poetry]
name = "themodelshop"
version = "0.1.0"
description = "Learning to learn to learn..."
authors = ["timothy d luna <timothy.d.luna@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.0"
numpy = "^1.19.4"
pyarrow = "^2.0.0"
scikit-learn = "^0.23.2"
pandas = "^1.1.4"

[build-system]
requires = ["poetry-core>=1.0.10"]
build-backend = "poetry.core.masonry.api"
